# kolesnikova_aa

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
marketplace/: main.py  models.py  service_models.py
marketplace/api/: acceptance.py  dependencies.py  discount.py  posting.py  routers.py  sku.py  task.py
marketplace/app/: config.py  database.py  exception_handlers.py  exceptions.py  fastapi.py
marketplace/migrations/: env.py
marketplace/migrations/versions/: b1aca963fe7b_add_all_models.py
marketplace/providers/: acceptance.py  discount.py  item.py  posting.py  sku.py  task.py
marketplace/schemas/: acceptance.py  discount.py  posting.py  sku.py  task.py
marketplace/services/: acceptance.py  discount.py  posting.py  sku.py  task.py
marketplace/utils/: provider.py  utils.py
tests/: conftest.py
tests/factories/models/: acceptance.py  discount.py  item.py  item_discount.py  posting.py  sku.py  stock.py  task.py
tests/factories/schemas/: acceptance.py  posting.py
tests/test_api/: test_acceptance.py  test_discount.py  test_posting.py  test_sku.py  test_task.py
tests/test_factories/test_models/: test_discount.py
tests/test_models/: test_discount.py
tests/test_services/: test_discount.py
